# Ampere-Core

./: .gitignore  Ampere.vcxproj  Ampere.vcxproj.filters  CMakeLists.txt  README.md  main.cpp  package.json
libs/: libs.json
platform/windows/: window.cpp  window.hpp
scripts/: compile.sh  start.sh
src/: Ampere.h  ampinc.hpp  main.cpp  test.cpp  test.hpp
src/core/: app.cpp  app.hpp  core.hpp  log.cpp  log.hpp  main.hpp  window.hpp
src/events/: event.hpp  event_app.hpp  event_key.hpp  event_mouse.hpp  event_window.hpp
src/graphics/: window.cpp  window.h  window.hpp
